--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <style>
         body {
             font-family: sans-serif;
-            background-color: gray;
+            background-color: red;
             color: var(--tg-theme-text-color, #222222);
             font-size: 16px;
             margin: 0;
@@ -182,7 +182,17 @@
 <body>
 
 <section>
-    <h1 id="greeting"></h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
+    <h1 id="greeting">SOME NEW TEXT</h1>
 
     <div id="buttons">
         <button onclick="webviewExpand();">Expand Webview</button>
