--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
@@ -9,17 +9,15 @@
     <meta name="MobileOptimized" content="176" />
     <meta name="HandheldFriendly" content="True" />
     <meta name="robots" content="noindex,nofollow" />
-    <title></title>
     <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <title>SIMPLE REACT-TELEGRAM WEBAPP</title>
 
+</head>
 <body>
+<!-- Тег куда рендерится приложение -->
+<div id="app"></div>
 
 <section>
-    <h1 id="greeting">SOME NEW TEXT</h1>
-    <h1 id="greeting">SOME NEW TEXT</h1>
 
     <div id="buttons">
         <button onclick="webviewExpand();">Expand Webview</button>
@@ -144,3 +142,4 @@
 </script>
 </body>
 </html>
+
