--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="robots" content="noindex,nofollow" />
     <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
-    <script src="main.js"></script>
-    <link rel="stylesheet" href="main.css">
+<!--    <script src="./main.js"></script>-->
+<!--    <link rel="stylesheet" href="./main.css">-->
 
 </head>
 <body>
