--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,62 @@
 </head>
 <body>
 <!-- Тег куда рендерится приложение -->
-<header>Some data</header>
-<div id="app"></div>
+<div id="app">
+
+    <script type="application/javascript">
+        const initData = Telegram.WebApp.initData || "";
+        const initDataUnsafe = Telegram.WebApp.initDataUnsafe || {};
+        document.querySelector(
+            "#greeting"
+        ).innerHTML = `Hi, ${initDataUnsafe.user.first_name}!`;
+        document.querySelector("#initData").innerHTML = JSON.stringify(
+            initData,
+            null,
+            2
+        );
+        document.querySelector("#initDataUnsafe").innerHTML = JSON.stringify(
+            initDataUnsafe,
+            null,
+            2
+        );
+        document
+            .querySelector("#themeData")
+            .html(JSON.stringify(Telegram.WebApp.themeParams, null, 2));
+
+        Telegram.WebApp.MainButton.setText("CLOSE WEBVIEW")
+            .show()
+            .onClick(function () {
+                webviewClose();
+            });
+
+        Telegram.WebApp.onEvent("themeChanged", function () {
+            document.querySelector("#themeData").innerHTML = JSON.stringify(
+                Telegram.WebApp.themeParams,
+                null,
+                2
+            );
+        });
+
+        function toggleMainButton(el) {
+            const mainButton = Telegram.WebApp.MainButton;
+            if (mainButton.isVisible) {
+                mainButton.hide();
+                el.innerHTML = "Show Main Button";
+            } else {
+                mainButton.show();
+                el.innerHTML = "Hide Main Button";
+            }
+        }
+
+        function webviewExpand() {
+            Telegram.WebApp.expand();
+        }
+
+        function webviewClose() {
+            Telegram.WebApp.close();
+        }
+    </script>
+</div>
 </body>
 </html>
 
