--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/><meta name="format-detection" content="telephone=no"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="MobileOptimized" content="176"/><meta name="HandheldFriendly" content="True"/><meta name="robots" content="noindex,nofollow"/><script src="https://telegram.org/js/telegram-web-app.js?1"></script><title></title><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body><header>Some data</header><div id="app"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/><meta name="format-detection" content="telephone=no"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="MobileOptimized" content="176"/><meta name="HandheldFriendly" content="True"/><meta name="robots" content="noindex,nofollow"/><script src="https://telegram.org/js/telegram-web-app.js?1"></script><title></title><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body><div id="app"><script>const initData = Telegram.WebApp.initData || "";
+        const initDataUnsafe = Telegram.WebApp.initDataUnsafe || {};
+        document.querySelector(
+            "#greeting"
+        ).innerHTML = `Hi, ${initDataUnsafe.user.first_name}!`;
+        document.querySelector("#initData").innerHTML = JSON.stringify(
+            initData,
+            null,
+            2
+        );
+        document.querySelector("#initDataUnsafe").innerHTML = JSON.stringify(
+            initDataUnsafe,
+            null,
+            2
+        );
+        document
+            .querySelector("#themeData")
+            .html(JSON.stringify(Telegram.WebApp.themeParams, null, 2));
+
+        Telegram.WebApp.MainButton.setText("CLOSE WEBVIEW")
+            .show()
+            .onClick(function () {
+                webviewClose();
+            });
+
+        Telegram.WebApp.onEvent("themeChanged", function () {
+            document.querySelector("#themeData").innerHTML = JSON.stringify(
+                Telegram.WebApp.themeParams,
+                null,
+                2
+            );
+        });
+
+        function toggleMainButton(el) {
+            const mainButton = Telegram.WebApp.MainButton;
+            if (mainButton.isVisible) {
+                mainButton.hide();
+                el.innerHTML = "Show Main Button";
+            } else {
+                mainButton.show();
+                el.innerHTML = "Hide Main Button";
+            }
+        }
+
+        function webviewExpand() {
+            Telegram.WebApp.expand();
+        }
+
+        function webviewClose() {
+            Telegram.WebApp.close();
+        }</script></div></body></html>
